python/test-data/testInferReturnType2.err
Traceback (most recent call last):
  File "test-data/testInferReturnType2.py", line 6, in <module>
    foo(2) # not OK
WyppTypeError: got value of wrong type
given:    'yuck'
expected: None

context: foo(i: int) -> None
                        ^^^^
declared at: test-data/testInferReturnType2.py:1
caused by: test-data/testInferReturnType2.py:3
  |         return "yuck"
